# chat_room

./: .gitignore  CMakeLists.txt  README.md  server.cc  server.h  socket.cc  socket.h
docs/: coding_tips.md
include/: client.h  login_server.h  myutility.h  singleton.hpp  socket.h  socketcpp.h  user.h
src/: CMakeLists.txt  chat_server.cc  client.cc  login_server.cc  myutility.cc  socketcpp.cc  user.cc
